fixed spacing issues with animated headlines and main element shadow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,12 +99,12 @@ footer {
     normal;
   
   --image: url(../images/glass-of-red-wine-bg-5169x3648.jpg);
-  --image2: url(../images/glass-of-red-wine-bg-900x1441.jpg);
+  --image2: url(../images/glass-of-red-wine-bg-900x1320.jpg);
   
   --color-v: black;
   --color: transparent; 
  
-    box-shadow: 2rem 2rem 3rem #000;
+    box-shadow: 0rem 2rem 3rem #000;
 }
 
 *, *::before, *::after {
@@ -126,12 +126,11 @@ footer {
     max-width: 80%;
     clear: both;
     border-radius: 2px;
-    margin: 10vh 0;
-    padding: 10px;
+    padding: 40vh 10vw;
 }
 
 .headlines {
-    border: 12px solid rgb(58, 7, 7);
+    border: 12px solid rgb(63, 7, 7);
     background-color: #fafafa;
     color: #000;
     font-weight: 400;
@@ -175,6 +174,6 @@ footer {
   --color-v: black;
   --color: transparent; 
  
-    box-shadow: 2rem 2rem 3rem #000;
+    box-shadow: 0rem 2rem 3rem #000;
     }
 }
